# chatGnT

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  01_preprocess_tokenize.ipynb  02_search_hyperparam.ipynb  02_train_double_head.ipynb  02_train_multi_task.ipynb  02_train_single_head.ipynb  02_train_single_task.ipynb  03_test_trained_models.ipynb  03_train_multi_task.ipynb  03_train_single_task.ipynb  04_test_trained_models.ipynb  testing.ipynb
src/: config.py  utils.py
src/chatGnT/: cli.py  config.py  utils.py
src/chatGnT/assets/: metrics_mt.json  metrics_st.json  model_mt.pt  model_st.pt  tokens_mt.json  tokens_st.json  vocab_mt_amt.json  vocab_mt_ingred.json  vocab_st.json
src/chatGnT/data/: dataloaders.py  load.py  preprocess.py  tokenize.py
src/chatGnT/models/: evaluate.py  positional_encoding.py  predict.py  structure.py  train.py  transformer.py
tests/: test_load.py  test_predict.py  test_preprocess.py  test_tokenize.py
